<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:id="@+id/llmain"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textStyle="bold"
        android:gravity="top"
        android:textSize="30sp"
        android:layout_marginBottom="100dp"
        />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_weight"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editHeightFt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_height_in_ft"
        android:inputType="number"
        android:padding="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editHeightIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_height_in_in"
        android:inputType="number"
        android:padding="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi"
        android:id="@+id/btnCalculate"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

</LinearLayout>
